--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="personal portfolio ">
     <title>portfolio </title>
-    <link rel="icon" href="profile.png" type="image/png">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="icon" href="./img/profile.png" type="image/png">
+    <link rel="stylesheet" href="./main.css" type="text/css">
 </head>
 
     <body>
